force-app/main/default/objects/Impact_Assessments__c/Impact_Assessments__c.object-meta.xml
<CustomObject>
    <description>This object is used whenever there is potential for an ER or Requirement to have an impact to another release or project</description>
    <label>Impact Assessment</label>
    <nameField>
        <label>Impact Assessments Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impact Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>