force-app/main/default/objects/Impact_Assessments__c/fields/Analysis__c.field-meta.xml
<CustomField>
    <fullName>Analysis__c</fullName>
    <description>Analysis once the impact assessment has completed</description>
    <label>Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>