force-app/main/default/objects/Impact_Assessments__c/fields/Impact_Assessment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Impact_Assessment_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who is responsible for the impact assessment</description>
    <inlineHelpText>Person who is responsible for the impact assessment</inlineHelpText>
    <label>Impact Assessment Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Impact_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>