force-app/main/default/objects/Impact_Assessments__c/fields/Impacted_Systems__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Systems__c</fullName>
    <label>Impacted Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>EAI</fullName>
            </value>
            <value>
                <fullName>Data Hub</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Surround</fullName>
            </value>
            <value>
                <fullName>Pricetool</fullName>
            </value>
            <value>
                <fullName>STARS</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>