force-app/main/default/objects/Impact_Assessments__c/fields/Potentially_Impacted_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Potentially_Impacted_Requirement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Requirement which could be potentially impacted by an ER or other project</description>
    <label>Potentially Impacted Requirement</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Impact Assessments</relationshipLabel>
    <relationshipName>Impact_Assessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>