force-app/main/default/objects/Impact_Assessments__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Impact Assessments</relationshipLabel>
    <relationshipName>Impact_Assessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>