force-app/main/default/objects/Impact_Assessments__c/fields/Requested_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Due_Date__c</fullName>
    <description>Due date for the requested impact assessment</description>
    <inlineHelpText>Due date for the requested impact assessment</inlineHelpText>
    <label>Requested Due Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>