force-app/main/default/objects/Impact_Assessments__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of impact assessment</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted to Assessment Owner</fullName>
                <default>true</default>
                <label>Submitted to Assessment Owner</label>
            </value>
            <value>
                <fullName>Assessment In Progress</fullName>
            </value>
            <value>
                <fullName>Assessment Provided</fullName>
            </value>
            <value>
                <fullName>Assessment Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>