force-app/main/default/objects/Impact_Assessments__c/fields/Type_of_Impact__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Impact__c</fullName>
    <label>Type of Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
            <value>
                <fullName>Code/Configuration Merge Required</fullName>
            </value>
            <value>
                <fullName>Conflicting Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>